Closed Bug 149176 Opened 22 years ago Closed 22 years ago

Profile Manager does not appear when trying to create a second profile and turbo is on

Categories

(Core Graveyard :: QuickLaunch (AKA turbo mode), defect)

x86
Windows ME
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: nbaca, Assigned: morse)

References

Details

(Whiteboard: [adt3 RTM])

Attachments

(1 file, 1 obsolete file)

Branch build 2002-06-03: WinMe
Edited all.js pref and turned the single profile pref to false.

Overview: Profile Manager does not appear when trying to create a second profile

Steps to reproduce:
1. Do a clean install  - emulating first time install on a machine- and have 
multiple 4.x profiles
2. The first launch shows me the ProfileManager with a list of the profiles to 
be migrated.  
3. Choose one and launch etc.  QuickLaunch icon is in the system tray. 
4. Exit
5. Select File|Programs|Netscape|Profile Manager

Actual Results: Profile Manager does not appear. Instead it shows the browser
using the first profile. I also tried using flags such as -installer or
-profilemanager and neither one worked. 

Workaround: I had to turn turbo off, then I could access Profile Manager to
create the second account. 

I logged this as a separate from bug#124255 because the Profile Manager doesn't
appear in any case so long as turbo is on.
Marking nsbeta1 because if the New Turbo Model is used by default for multiple
accounts then this will make it difficult for the user to discover how to create
the second profile. They have to turn turbo off to see Profile Manger to then
create the second profile.
Keywords: nsbeta1
nsbeta1+/adt3 per nav triage team
Blocks: 108795
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt3]
Target Milestone: --- → mozilla1.0.1
->morse
Assignee: law → morse
Let me paraphrase this bug a bit so as to make it a bit easier to reproduce.

1. Using profile manager normally (w/o turbo), create or delete profiles to that 
you have exactly two of them.

2. Exit profile manager

3. type "mozilla -turbo"

4. type "mozilla -profilemanager".  Profile manager launches as expected

If you do the same steps but with only one profile in step 1, you will not get 
the profile manager in step 4.

So the problem occurs only when you have exactly one profile, turbo is executing 
(i.e., icon on status bar, no windows open), and you try to launch profile 
manager.
If this is not fixed for RTM, the workaround should be mentioned in the release
notes.  Added relnote keyword.
Keywords: relnote
Another interesting observation.  Everything works fine in this scenario

1. Using profile manager normally (w/o turbo), create or delete profiles to that 
you have exactly one profile.

2. Start browser, go to preferences and set turbo mode on.  Turbo icon appears

3. Exit browser.  Turbo icon remains.

4. type "mozilla -profilemanager".  Profile manager launches as expected
Keywords: relnote
BTW, this problem has *NOTHING* to do with the new turbo model.  The same 
behavior would have occured in the old model as well.  Removing "New Tubro 
Model:" form summary to reflect that.
Status: NEW → ASSIGNED
Summary: New Turbo Model: Profile Manager does not appear when trying to create a second profile → Profile Manager does not appear when trying to create a second profile and turbo is on
Problem is occuring on the following line in 
nsNativeAppSupportWin::EnsureProfile

  if (!mForceProfileStartup && NS_SUCCEEDED(rv) && haveProfile)
      return NS_OK;

At this point haveProfile should be false if we were started up with 
-profilemanager.  But instead it is coming up true unless there is more than one 
profile.
Attachment #86536 - Attachment is obsolete: true
I can sr if blake or bill will r.
Comment on attachment 86558 [details] [diff] [review]
take into account the case that window is open and profilemanager is invoked

r=law
Attachment #86558 - Flags: review+
Comment on attachment 86558 [details] [diff] [review]
take into account the case that window is open and profilemanager is invoked

sr=ben@netscape.com
Attachment #86558 - Flags: superreview+
adt1.0.1+ (on ADT's behalf) for checkin to the 1.0 branch, pending Driver's
approval. pls check this in asap, then add the keyword "fixed1.0.1".
Blocks: 143047
Whiteboard: [adt3] → [adt3 RTM]
Comment on attachment 86558 [details] [diff] [review]
take into account the case that window is open and profilemanager is invoked

a=asa (on behalf of drivers) for checkin to the 1.1 trunk.
Attachment #86558 - Flags: approval+
Fixed on trunk.  Pending drivers approval for branch checkin
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
marking verified on trunk build 2002060908
profile manager is now accessible using steps outlined in comment 1
 from start menu
 using options -profilemanager and -installer
Status: RESOLVED → VERIFIED
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
same tests on branch build for 6/11
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: