bug 149176, profile manager doesn't appear when trying to create a 2nd profile and turbo is active, r=law, sr=ben